fixed colors and alignment

--- a/robots/style.css
+++ b/robots/style.css
@@ -59,7 +59,8 @@ body{
 
 #site-wrapper{
 	width:100%;
-	background-color:brown
+	background-color:#ecf2d3
+	position:relative
 		
 	}
 	
@@ -86,9 +87,13 @@ body{
 	}
 	
 	#menu-wrapper{
+		display:inline-block;
+		position:absolute;
+		padding-top:3px;
+		padding-left:180px;
 		width:100%;
-		background-color:lightgreen;
-		height:50px;
+		background-color:#875c33;
+		height:25px;
 		
 	}
 	
@@ -104,12 +109,22 @@ body{
 	
 	
 	#sidebar{
-		float:left
-		width30%
+		background-color:white;
+		float:right
+		width:400px;
+		margin-top:60px;
 		}
+		
+		
 	#page{
+		clear:both;
 		float:left;
-		width:70%;
+		width:400px;
+		background-color:white;
+		margin-left:180px;
+		margin-top:60px;
+		margin-right:30px;
+		margin-bottom:50px;
 		
 		
 	}
@@ -120,7 +135,7 @@ body{
 	}
 	
 	#footer-wrapper{
-		background-color:brown;
+		background-color:sienna;
 		width:100%;
 		height:100px;
 		
